deploy/infrastructure/grafana/templates/grafana-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: grafana
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: grafana
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.techbit.su`)
      kind: Rule
      services:
        - name: grafana
          namespace: victoriametrics
          port: 80
